k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-k8s-app-demo
spec:
  type: NodePort
  selector:
    app: go-k8s-app-demo
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
