k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-k8s-app-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: local.ecosia.org
      http:
        paths:
          - path: /tree
            pathType: Prefix
            backend:
              service:
                name: go-k8s-app-demo
                port:
                  number: 8888
